fix: fix horizontal scroll in mobile view

--- a/project-management/src/app/board/pages/board/board.component.scss
+++ b/project-management/src/app/board/pages/board/board.component.scss
@@ -51,6 +51,7 @@
 
 .board__columns {
   display: flex;
+  padding-bottom: 30px;
   flex-wrap: nowrap;
   gap: 1rem;
   flex-grow: 1;
